@@ -10,6 +10,7 @@ import net.minecraft.entity.EntityType;
 import net.minecraft.entity.effect.StatusEffect;
 import net.minecraft.inventory.Inventory;
 import net.minecraft.item.Item;
+import net.minecraft.nbt.CompoundTag;
 import net.minecraft.util.Identifier;
 import net.minecraft.util.registry.Registry;
 
@@ -47,5 +48,9 @@ public class CrossPlatformStuffImpl {
 
     public static boolean isInventoryTile(BlockEntity blockEntity) {
         return blockEntity instanceof Inventory || blockEntity instanceof InventoryProvider;
+    }
+
+    public static boolean blockDataContains(CompoundTag nbt, String tag) {
+        return nbt.contains(tag);
     }
 }
